<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:layout_gravity="center"
    android:background="@drawable/bg">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="176dp"
        android:layout_height="61dp"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        app:tint="@color/secondColor" />
    <EditText
        android:id="@+id/TextUsername"
        android:layout_width="267dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/edittext"
        android:ems="13"
        android:gravity="center"
        android:hint="@string/hintUser"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/textHintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/TextEmail"
        android:layout_width="267dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext"
        android:ems="13"
        android:gravity="center"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/textHintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextUsername" />

    <EditText
        android:id="@+id/TextPhone"
        android:layout_width="267dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext"
        android:ems="13"
        android:gravity="center"
        android:hint="@string/hintPhone"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="@color/textHintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPassword" />

    <EditText
        android:id="@+id/TextPassword"
        android:layout_width="267dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext"
        android:ems="13"
        android:gravity="center"
        android:hint="@string/hintPass"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/textHintColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextEmail" />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPhone">

        <RadioButton
            android:id="@+id/checkbox_Male"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:buttonTint="@color/secondColor"
            android:text="@string/textMale"
            android:textColor="@color/secondColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/checkbox_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/secondColor"
            android:text="@string/textFemale"
            android:textColor="@color/secondColor"
            android:textSize="20sp"
            android:textStyle="bold"

            />
    </RadioGroup>

    <android.widget.Button
        android:id="@+id/Button"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/btn_style"
        android:text="@string/btnSing"
        android:textColor="@color/secondColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/TextReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/textHaveAcc"
        android:textColor="@color/specialColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button"
        app:layout_constraintVertical_bias="0.0" />



</androidx.constraintlayout.widget.ConstraintLayout>