<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:layout_gravity="center"
    android:background="@drawable/ggggggg"
    >


    <ImageView
        android:id="@+id/logo"
        android:layout_width="221dp"
        android:layout_height="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048"
        app:srcCompat="@drawable/finalservice"
        app:tint="@color/shineColor" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="267dp"
        android:layout_height="50dp"
        android:layout_marginTop="108dp"
        android:background="#4020DF7F"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="0dp"
        android:ems="13"
        android:gravity="center"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"

        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/textHintColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.356" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="267dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="#5020DF7F"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="0dp"
        android:ems="13"
        android:gravity="center"
        android:hint="@string/hintPass"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/textHintColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintVertical_bias="0.019" />

    <android.widget.Button
        android:id="@+id/btnLog"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/btn_style"
        android:text="@string/btnLog"
        android:textColor="@color/secondColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/textCreateAcc"
        android:textColor="@color/shineColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLog"
        app:layout_constraintVertical_bias="0.78" />


</androidx.constraintlayout.widget.ConstraintLayout>